changed some stuff

--- a/workspace.html
+++ b/workspace.html
@@ -45,7 +45,7 @@
                         </div>
                     </div>
                     <div id="help-content">
-                        <div class="modal fade" id="help-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="run-confirm-modal-label" aria-hidden="true">
+                        <div class="modal fade" id="help-modal" aria-labelledby="run-confirm-modal-label" aria-hidden="true">
                             <div class="modal-dialog modal-dialog-scrollable modal-xl">
                                 <div class="modal-content">
                                     <div class="modal-header">
@@ -73,7 +73,7 @@
                                         <h5 class="modal-title" id="images-modal-label">Images</h5>
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
-                                    <div class="modal-body" id="image-container" class="image-container">
+                                    <div class="modal-body image-container" id="image-container">
 
                                     </div>
                                     <div class="modal-footer">
@@ -107,7 +107,7 @@
                                         <h5 class="modal-title" id="images-webcam-label">Images - My Dataset 1</h5>
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
-                                    <div class="modal-body" id="image-webcam-container" class="image-container">
+                                    <div class="modal-body image-container" id="image-webcam-container">
 <!--                                        <div id="webcam-carousel" class="carousel slide">-->
 <!--                                            <div class="carousel-inner">-->
 <!--                                                <div class="carousel-item active" id="webcam-carousel-video">-->
