--- a/workspace.html
+++ b/workspace.html
@@ -144,19 +144,10 @@
                                     <div class="modal-footer">
                                         <button type="button" id="images-preview-no" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                                         <!--                        <button type="button" id="images-preview-yes" class="btn btn-success" data-bs-dismiss="modal">Confirm</button>-->
-                                        <div class="btn-group">
+                                        <div class="btn-group dropup">
                                             <button type="button" class="btn btn-success dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"> Confirm </button>
-                                            <ul class="dropdown-menu">
-                                                <li>
-                                                    <button id="upload1" class="dropdown-item" data-bs-dismiss="modal">
-                                                        Upload to Class 1
-                                                    </button>
-                                                </li>
-                                                <li>
-                                                    <button id="upload2" class="dropdown-item" data-bs-dismiss="modal">
-                                                        Upload to Class 2
-                                                    </button>
-                                                </li>
+                                            <ul id="upload-list" class="dropdown-menu">
+
                                             </ul>
                                         </div>
                                     </div>
@@ -173,7 +164,7 @@
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                        <p>Do you want to build your code?</p>
+                                        <p>Do you want to run your code?</p>
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" id="run-confirm-no" class="btn btn-outline-danger" data-bs-dismiss="modal">No</button>
