workspace will now save when closed, made dense block not allow 0 neurons

--- a/workspace.html
+++ b/workspace.html
@@ -120,6 +120,7 @@
                                                         <button class="btn btn-primary webcam-ui-button" id="enable-cam">Enable Webcam</button>
                                                         <button type="button" class="btn btn-primary webcam-ui-button disabled" id="capture-webcam">Capture images</button>
                                                     </div>
+                                                    <p id="images-taken-count"></p>
 <!--                                                </div>-->
 <!--                                                <div class="carousel-item" id="images-preview-webcam">-->
 
