--- a/workspace.html
+++ b/workspace.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head>
     <meta http-equiv="Content-Security-Policy"
-          content="default-src 'self' 'unsafe-inline'
+          content="default-src 'self' 'unsafe-inline' 'unsafe-eval'
           https://code.jquery.com/jquery-3.1.1.min.js
           https://blockly-demo.appspot.com https://cdn.jsdelivr.net
           https://unpkg.com https://ajax.googleapis.com http://localhost:3000
