added some files

--- a/creator.html
+++ b/creator.html
@@ -9,7 +9,7 @@
     <title>Project Creator</title>
 </head>
 <body>
-  <p>HTML for project creator screen</p>
+  <p>HTML for project creator screen - CLICK THE BUTTON</p>
   <button id="ce-button" class="btn bg-primary btn-sm">load workspace HTML</button>
   <script src="creator.js"></script>
 </body>
