--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="content1">
-        <p>Home screen HTML</p>
+        <p>Home screen HTML - CLICK THE BUTTON</p>
         <button id="bc-button" class="btn bg-primary btn-sm">Go to creator screen</button>
         <script src="home.js"></script>
         <img src="images/builton_light.png" id="builton_img" class="card-img" alt="Built with Blockly">
